Tue Oct 14 01:27:54 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c (nmin_run): max(n) and max_by(n) returns an array in
	  descending order.
	  [ruby-core:65452] Suggested by David Grayson.

Mon Oct 13 20:44:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (update-gems): chdir to the target directory and then
	  add the tool directory to load paths, for older BASERUBY.
	  [Bug #10372][ruby-core:65630]

Mon Oct 13 17:53:01 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/xmlrpc/parser.rb: added new parser class using libxml-ruby gem.
	  [Feature #9379][ruby-core:59633]
	* lib/xmlrpc/config.rb: ditto.

Mon Oct 13 16:32:56 2014  Tanaka Akira  <akr@fsij.org>

	* lib/find.rb (Find.find): Call to_path for arguments to obtain
	  strings.
	  [ruby-core:63713] [Bug #10035] Reported by Herwin.

Mon Oct 13 15:42:25 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* common.mk: use relative load path for bundled_gems directory.
	  [Bug #10372][ruby-core:65630]

Mon Oct 13 08:44:06 2014  Zachary Scott  <e@zzak.io>

	* README.EXT: [DOC] fix example missing typedef with patch by
	  @steveklabnik [Fixes GH-739] https://github.com/ruby/ruby/pull/739

	* README.EXT.ja: ditto.

Mon Oct 13 06:52:09 2014  Eric Wong  <e@80x24.org>

	* array.c (ary_recycle_hash): add RB_GC_GUARD
	  (rb_ary_diff): remove volatile
	  [Bug #10369]

Mon Oct 13 03:20:23 2014  Zachary Scott  <e@zzak.io>

	* ext/date/date_core.c: [DOC] Clean up whitespace, examples, and typos
	  in date_core based on a patch by @vipulnsward [Fixes GH-724]
	  https://github.com/ruby/ruby/pull/724

Mon Oct 13 02:39:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (remove_duplicate_keys): should not simply eliminate all
	  value nodes, which may have side effects.
	  [ruby-core:65625] [Bug #10315]

Sun Oct 12 10:39:16 2014  Zachary Scott  <e@zzak.io>

	* vm.c: [DOC] fix typo by @yui-knk [Fixes GH-738]
	  https://github.com/ruby/ruby/pull/738
